website/content/v3/integrations/integration-with-fastify.mdx
---
description:
  Fastify is one of the popular HTTP server frameworks for Node.js. It is a very simple, yet
  powerful framework that is easy to learn and use.
title: Integration with Fastify
sidebarTitle: Fastify
---

[Fastify is one of the popular HTTP server frameworks for Node.js.](https://www.fastify.io/) It is a
very simple, yet powerful framework that is easy to learn and use. You can easily integrate GraphQL
Yoga with Fastify.

So you can benefit from the powerful plugins of Fastify ecosystem with GraphQL Yoga.
[See the ecosystem](https://www.fastify.io/docs/latest/Guides/Ecosystem/)

## Installation

```sh npm2yarn
npm i fastify
```

```sh npm2yarn
npm i graphql
```

```sh npm2yarn
npm i graphql-yoga
```

## Example

```ts
import fastify, { FastifyReply, FastifyRequest } from 'fastify'
import { createYoga } from 'graphql-yoga'

// This is the fastify instance you have created
const app = fastify({ logger: true })

const yoga = createYoga<{
  req: FastifyRequest
  reply: FastifyReply
}>({
  // Integrate Fastify logger
  logging: {
    debug: (...args) => args.forEach(arg => app.log.debug(arg)),
    info: (...args) => args.forEach(arg => app.log.info(arg)),
    warn: (...args) => args.forEach(arg => app.log.warn(arg)),
    error: (...args) => args.forEach(arg => app.log.error(arg))
  }
})

/**
 * We pass the incoming HTTP request to GraphQL Yoga
 * and handle the response using Fastify's `reply` API
 * Learn more about `reply` https://www.fastify.io/docs/latest/Reply/
 **/
app.route({
  // Bind to the Yoga's endpoint to avoid rendering on any path
  url: yoga.graphqlEndpoint,
  method: ['GET', 'POST', 'OPTIONS'],
  handler: async (req, reply) => {
    // Second parameter adds Fastify's `req` and `reply` to the GraphQL Context
    const response = await yoga.handleNodeRequest(req, {
      req,
      reply
    })
    response.headers.forEach((value, key) => {
      reply.header(key, value)
    })

    reply.status(response.status)

    reply.send(response.body)

    return reply
  }
})

app.listen(4000)
```

## Add dummy content type parser for File Uploads

Fastify needs to be aware of GraphQL Yoga will handle `multipart/form-data` requests because
otherwise it will throw an error something like `Unsupported media type`.

```ts
// This will allow Fastify to forward multipart requests to GraphQL Yoga
app.addContentTypeParser('multipart/form-data', {}, (req, payload, done) => done(null))
```

> You can also check a full example on our GitHub repository
> [here](https://github.com/dotansimha/graphql-yoga/tree/v3/examples/fastify)
